--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "webdevpack/sdk-php",
+    "name": "webdevpack/webdevpack-sdk-php",
     "description": "WebDevPack SDK for PHP",
     "license": "MIT",
     "homepage": "https://webdevpack.com/",
