--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
     "name": "webdevpack/webdevpack-sdk-php",
-    "description": "WebDevPack SDK for PHP",
+    "description": "WEBDEVPACK SDK for PHP",
     "license": "MIT",
     "homepage": "https://webdevpack.com/",
     "support": {
